# test-module

./: .viam-gen-info  CMakeLists.txt  README.md  conanfile.py  main.cpp  meta.json  my-ns_bullseye-test_bseye.md  my-ns_sensors2_mysensor.md  my-ns_sensors_mysensor.md  setup.sh
src/: bseye.cpp  bseye.hpp  mysensor.cpp  mysensor.hpp
